# agent-memory-mcp

./: .gitignore  README.md  pyproject.toml
adapters/cursor/: README.md  session_end.sh  session_start.sh
evals/: policy_regression_cases.json
examples/: golden_path.py  sse_watch.sh
src/agent_memory_mcp/: adapter_cli.py  app_context.py  auth.py  auth_presets.py  db.py  db_audit.py  db_jobs.py  db_memory.py  db_policy.py  db_schema.py  embeddings.py  evaluator.py  factory.py  handoff_cli.py  handoff_schema.py  integrity.py  keyring.py  metrics_export.py  metrics_http.py  models.py  runtime_bootstrap.py  server.py  server_tools_jobs.py  server_tools_memory.py  server_tools_ops.py  server_tools_policy.py  service.py  service_base.py  service_constants.py  service_handoff.py  service_jobs.py  service_memory.py  service_ops.py  service_policy.py  settings.py  vector_index.py  vector_store.py  worker.py
src/agent_memory_mcp/schemas/: agent-memory-handoff.v1.schema.json
tests/: test_adapter_cli.py  test_app_context.py  test_auth.py  test_auth_presets.py  test_golden_path_integration.py  test_handoff.py  test_handoff_cli.py  test_handoff_schema.py  test_integrity.py  test_jobs.py  test_keyring.py  test_metrics_export.py  test_metrics_http.py  test_observability.py  test_service.py  test_vector_store.py  test_worker.py
