[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-mcp"
version = "0.2.0"
description = "MCP server for agent memory and policy self-improvement workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.6.0",
  "httpx>=0.28.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
agent-memory-mcp = "agent_memory_mcp.server:main"
